# tensorflow_object_detection_tflite

./: CMakeLists.txt  LICENSE  create_supervisely_tf_record.py  demo.cpp  demo.h  demo.py  labelmap.txt  object_detector_detection_api.py  object_detector_detection_api_lite.py  readme.md
include/tensorflow/lite/: BUILD
include/tensorflow/lite/examples/label_image/: BUILD  label_image.cc  label_image.h  label_image_test.cc  opencv.BUILD
include/tensorflow/lite/examples/object_detection/: BUILD  bitmap_helpers.cc  bitmap_helpers.h  bitmap_helpers_impl.h  get_top_n.h  get_top_n_impl.h  object_detection.cc  object_detection.h  object_detection_test.cc
include/tensorflow/lite/experimental/micro/examples/magic_wand/train/: requirements.txt
include/tensorflow/lite/kernels/internal/reference/: reference_ops.h
include/tensorflow/lite/tools/make/: Makefile  build_aarch64_lib.sh  build_rpi_lib.sh
include/tensorflow/lite/tools/make/downloads/flatbuffers/grpc/: pom.xml
include/tensorflow/lite/tools/make/downloads/flatbuffers/grpc/tests/: pom.xml
models/research/object_detection/mobilenet_ssd_v2_train/: pipeline.config
models/research/object_detection/mobilenet_ssd_v2_train/pre_trained_models/: model.ckpt.index  pipeline.config
